# ArithmeticPractice

./: CMakeLists.txt  Practice10.cpp  Practice11.cpp  Practice9.c  README.md  interviwpractice1.c  practice1.java  practice12.c  practice13.c  practice14.c  practice15.c  practice16.c  practice17.c  practice18.c  practice19.c  practice2.c  practice20.cpp  practice20.h  practice21.cpp  practice22.cpp  practice23.cpp  practice24.cpp  practice25.cpp  practice26.cpp  practice27.cpp  practice28.cpp  practice29.cpp  practice3.c  practice30.cpp  practice31.cpp  practice32.cpp  practice33.cpp  practice34.cpp  practice35.cpp  practice36.cpp  practice37.cpp  practice38.cpp  practice39.cpp  practice4.cpp  practice40.cpp  (+5 more)
