cmake_minimum_required(VERSION 3.6)
project(ArithmeticPractice)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES practice2.c practice3.c practice4.cpp practice5.c practice6.cpp practice7.c practice8.c Practice9.c Practice10.cpp Practice11.cpp practice12.c practice13.c practice14.c practice15.c practice16.c practice17.c practice18.c practice19.c practice20.cpp practice20.cpp practice20.h practice21.cpp practice22.cpp practice23.cpp practice24.cpp practice25.cpp practice26.cpp)
add_executable(ArithmeticPractice ${SOURCE_FILES} )